fix: flickering navbar

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 
 /* ------------------------------------------- Colors ------*/
 .navbar-color {
-  background-color: rgba(220, 15, 13, 0.8);
+  background-color: rgba(220, 15, 13, .8);
 }
 
 #intro {
@@ -88,6 +88,19 @@ header {
 }
 
 /* ------------------------------------------- Nav ------*/
+.nav-item {
+  text-align: right;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 22px;
+  letter-spacing: 2px;
+  padding-right: 15px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+.navbar-collapse {
+  flex-grow: 0;
+}
 
 .navbar-brand img {
   width: 150px;
@@ -102,39 +115,18 @@ header {
 .navbar-toggler-icon {
   font-size: xx-large;
 }
-.navbar-nav {
-  margin: 0 auto;
-}
-.navbar-collapse {
-  flex-grow: 0;
-}
-.collapse .nav-item {
-  display: inline;
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 22px;
-  letter-spacing: 2px;
-  text-align: right;
-  padding-right: 15px;
-  margin-bottom: 60px;
-  margin-top: 21px;
-}
-
-.nav-link {
-  padding-bottom: 0;
-  display: inline;
-  color: white;
-}
-
-.navbar-nav .nav-link.active {
-  color: white;
-}
-
 /* ------------------------------------------- links ------*/
-
-.nav-item .active {
-  border-bottom: 3px solid white;
+.nav-link {
+  color: white;
+  
+  display: inline;
 }
+
+  .navbar-nav .nav-link.active{
+    color: #fff;
+    border-bottom: 2px solid #fff;
+  }
+
 
 /* ------------------------------------------- common classes ------*/
 
